--- a/doc/release_notes.asciidoc
+++ b/doc/release_notes.asciidoc
@@ -32,6 +32,7 @@ endif::backend-docbook[]
 ** Add support for more than one DP core in software mode see link:trex_appendix_software_mode.html[software mode]
 ** Add support for Field Engine dependent variables link:trex_stateless.html#_tutorial_field_engine_dependent_variables[dependent_variables]
 * ASTF interactive - add support for topology link:trex_astf.html#_interactive_mode[interactive_mode]
+* ZMQ: enable hearbeat. This is good for situations that the client and server are remote (e.g. The server at the lab and client GUI at DC)  and a firewall betwean them drop the connection after a long time without keepalive. Another side feature is the ability to set the time-out of the connection for remote connection.
 
 == Release 2.48 ==
 
