--- a/doc/release_notes.asciidoc
+++ b/doc/release_notes.asciidoc
@@ -26,6 +26,13 @@ ifdef::backend-docbook[]
 
 endif::backend-docbook[]
 
+== Release 2.50 ==
+
+* STL/ASTF
+** L2 emulation (IPv4,IPv6,Dot1q,QinQ) API using Linux network namespace. This works for STL and ASTF see link:trex_stateless.html#linux_network_namespace[name space] for more info
+* STL, supports VxLAN hardware counters for XL710/X710 TBD-link 
+
+
 == Release 2.49 ==
 
 * STL  
