--- a/doc/trex_stateless.asciidoc
+++ b/doc/trex_stateless.asciidoc
@@ -1883,7 +1883,6 @@ trex-a-0-1-L: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 9280
         TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
 ----
 
-
 [NOTE] 
 =====================================================================
 It is possible to monitor and capture the traffic from/to the namespace using the usual capture capability 
@@ -1893,6 +1892,64 @@ It is possible to monitor and capture the traffic from/to the namespace using th
 =====================================================================
 You won't be able to ping 1.1.1.1 (original port ip) as TRex ping has one default gateway 
 =====================================================================
+
+
+===== Console commands example 
+
+The Console commands objective is for low scale operation add/removing one node at a time 
+The folowing example present that 
+
+[source,bash]
+----
+  trex(service)>ns add -p 0 --mac 00:01:02:03:04:05 --src 1.1.1.3 --dst 1.1.1.2 --ipv6 
+
+  trex(service)>ns show-node -p 0 --mac 00:01:02:03:04:05
+
+   {'nodes': [{'ether': {'src': '00:01:02:03:04:05'},
+            'ipv4': {'dst': '1.1.1.2', 'src': '1.1.1.3'},
+            'ipv6': {'enabled': True, 'src': ''},
+            'linux-ns': 'trex-a-0-1',
+            'linux-veth-external': 'trex-a-0-1-T',
+            'linux-veth-internal': 'trex-a-0-1-L',
+            'vlan': {'tags': []}}]}
+
+
+  trex(service)>ns show-nodes -p 0
+
+       Setting port 0 in with namespace configuration               [SUCCESS]
+        
+        
+        wait_for_async_results                                       [SUCCESS]
+        
+        ns nods
+        
+         node-id   |        mac        
+        -----------+------------------
+            0      | 00:01:02:03:04:05
+            
+        
+  trex(service)>ns show-counters -p 0
+        
+        Setting port 0 in with namespace configuration               [SUCCESS]
+        
+        
+        wait_for_async_results                                       [SUCCESS]
+        
+        ns stats
+        
+                name         |       value       |         help         
+        ---------------------+-------------------+---------------------
+        rx_unicast_bytes     |        60         | rx unicast bytes     
+        tx_multicast_bytes   |        648        | tx multicast bytes   
+        rx_unicast_pkts      |         1         | rx unicast pkts      
+        tx_multicast_pkts    |         8         | tx multicast pkts    
+        rx_multicast_bytes   |        480        | rx multicast bytes   
+        rx_multicast_pkts    |         8         | rx multicast pkts    
+    
+----
+
+
+
 
 === Traffic profile tutorials
 
