--- a/doc/trex_index.asciidoc
+++ b/doc/trex_index.asciidoc
@@ -7,14 +7,11 @@ TRex Documentation
 
 include::trex_ga.asciidoc[]
 
+*TRex is presented at*
 
-//*Cisco Live! 2018, Orlando*
-//
-//image:images/clus18.png[width=100,title=""]  
-//
-//* Wednesday, Jun 13,   Learning Session    link:https://www.ciscolive.com/us/learn/sessions/session-catalog/?search=DEVNET-1120[REGISTER NOW]
-//* Tuesday,   Jun 12  Workshop-Python API automation  link:http://www.ciscolive.com/us/learn/sessions/session-catalog/?search=DEVNET-2568[REGISTER NOW]
-//
+image:images/fosdem.png[width=200,title="Brussels, Belgium"]  
+
+* *2019-02-03* | *14:20:00*  link:https://fosdem.org/2019/schedule/event/trex_generator[session]
 
 == Presentations
 
