--- a/doc/trex_appendix_mellanox.asciidoc
+++ b/doc/trex_appendix_mellanox.asciidoc
@@ -18,70 +18,74 @@ Installing the full OFED package is the simplest way to make it work (trying to 
 The advantage of this model is that you can control it using standard Linux tools (ethtool and ifconfig will work).
 The disadvantage is the OFED dependency.
 
-== Distro Installation 
+== Distro Installation
 
 We tested the following distro with TRex and OFED. Others might work too.
 
-* CentOS 7.4 (This is the *only* verified distro)
+* CentOS 7.6 (This is the *only* verified distro)
 
-Following distro was tested and did *not* work for us.
+Following distros were tested and did *not* work for us in the past (with older OFEDs).
 
 * Fedora 21 (3.17.4-301.fc21.x86_64)
-* Ubuntu 14.04.3 LTS (GNU/Linux 3.19.0-25-generic x86_64)  -- crash when RSS was enabled link:https://trex-tgn.cisco.com/youtrack/issue/trex-294[MLX RSS issue]
+* Ubuntu 14.04.3 LTS (GNU/Linux 3.19.0-25-generic x86_64) -- crash when RSS was enabled link:https://trex-tgn.cisco.com/youtrack/issue/trex-294[MLX RSS issue]
 
-== OFED Installation  
+== OFED Installation
 
-Information was taken from  link:http://www.mellanox.com/page/products_dyn?product_family=26&mtag=linux_sw_drivers[Install OFED]
+Information was taken from link:http://www.mellanox.com/page/products_dyn?product_family=26&mtag=linux_sw_drivers[Install OFED]
 
-* Download *OFED 4.3.1* tar for RedHat 7.4 distro. 
-
-[IMPORTANT]
-=====================================
-The version must be exactly *MLNX_OFED_LINUX-4.3.1*  for CentOS 7.4 any other version won't work
-=====================================
+* Download *OFED 4.6-1.0.1* tar for RHEL 7.6 distro.
 
 [IMPORTANT]
 =====================================
-RedHat 7.4 distro and MLNX_OFED_LINUX-4.3.1 is mandatory. You can't have any different version. 
-Please follow the long installation process in the following sections. There is no need to install DPDK on your system. 
+The version must be exactly *MLNX_OFED_LINUX-4.6.1* for CentOS 7.6, any other versions might not work
 =====================================
 
 [IMPORTANT]
 =====================================
-Make sure you have an internet connection without firewalls for HTTPS/HTTP - required by yum/apt-get
+CentOS/RHEL 7.6 distro and MLNX_OFED_LINUX-4.6.1 is mandatory to get support from us.
+Please follow the long installation process in the following sections. There is no need to install DPDK on your system.
+=====================================
+
+[IMPORTANT]
+=====================================
+Make sure you have an internet connection without firewalls for HTTPS/HTTP - required by yum
 =====================================
 
 .Verify md5
 [source,bash]
 ----
-[bash]>md5sum MLNX_OFED_LINUX-4.3-1.0.1.0-rhel7.4-x86_64.tgz
-9ae98b165b034d3397fae7e38c5fc664  MLNX_OFED_LINUX-4.3-1.0.1.0-rhel7.4-x86_64.tgz
+[bash]>md5sum MLNX_OFED_LINUX-4.6-1.0.1.1-rhel7.6-x86_64.tgz
+acd31f33f332ee87d622cb7015fb551c  MLNX_OFED_LINUX-4.6-1.0.1.1-rhel7.6-x86_64.tgz
 ----
 
 .Open the tar
 [source,bash]
 ----
-[bash]>tar -xzf MLNX_OFED_LINUX-4.3-1.0.1.0-rhel7.4-x86_64.tgz
-[bash]>cd MLNX_OFED_LINUX-4.3-1.0.1.0-rhel7.4-x86_64
+[bash]>tar -xf /scratch/MLNX_OFED_LINUX-4.6-1.0.1.1-rhel7.6-x86_64.tgz
+[bash]>cd MLNX_OFED_LINUX-4.6-1.0.1.1-rhel7.6-x86_64
 ----
 
 .Run Install script (use this exact command)
 [source,bash]
 ----
-[bash]>sudo ./mlnxofedinstall --with-mft --with-mstflint --dpdk --upstream-libs 
-
-
-Log: /tmp/ofed.build.log
-Logs dir: /tmp/MLNX_OFED_LINUX.10406.logs
-
+[bash]>sudo ./mlnxofedinstall --with-mft --with-mstflint --dpdk --upstream-libs
+Logs dir: /tmp/MLNX_OFED_LINUX.26498.logs
+General log file: /tmp/MLNX_OFED_LINUX.26498.logs/general.log
+Verifying KMP rpms compatibility with target kernel...
+This program will install the MLNX_OFED_LINUX package on your machine.
+Note that all other Mellanox, OEM, OFED, RDMA or Distribution IB packages will be removed.
+Those packages are removed due to conflicts with MLNX_OFED_LINUX, do not reinstall them.
 
 Do you want to continue?[y/N]:y
 
-Uninstalling the previous version of MLNX_OFED_LINUX
+...
+
+Installation finished successfully.
+
+<Firmware might be updated here>
 
 ...
 
-Installation passed successfully
 To load the new driver, run:
 /etc/init.d/openibd restart
 ----
@@ -90,7 +94,7 @@ To load the new driver, run:
 .Reboot
 [source,bash]
 ----
-[bash]>sudo  reboot
+[bash]>sudo reboot
 ----
 
 
@@ -137,7 +141,12 @@ hca_id: mlx5_1
                         link_layer:             Ethernet
 
 ----
-<1> Verify latest firmware. Currently it's 16.22.1002 for Connect5 and 12.22.1002 for Connect4.
+<1> Verify latest firmware. Currently it's 16.25.1020 for Connect5 and 12.25.1020 for Connect4.
+
+[IMPORTANT]
+=====================================
+If you are using VF/VM, you can update the FW in the host on the PF.
+=====================================
 
 .ibdev2netdev
 [source,bash]
@@ -211,31 +220,31 @@ mlx5_1 port 1 ==> enp4s0f1 (Up)
 
 == 100Gb Optics 
 
-The optics should be approved Mellanox optics any other optics might not work due to speed field in the optic eeprom that breaks vendor compatibility verification. 
+The optics should be approved Mellanox optics, any other optics might not work due to speed field in the optic eeprom that breaks vendor compatibility verification.
 
-In case the NIC is stuck in IB try 
+In case the NIC is stuck in IB try
 
 .Change to Ethernet mode
 [source,bash]
 ----
-[bash]>sudo mstconfig -d [youpci] set LINK_TYPE_P1=2 LINK_TYPE_P2=2 
+[bash]>sudo mstconfig -d [youpci] set LINK_TYPE_P1=2 LINK_TYPE_P2=2
 ----
 
-For example for 04:00.0 
+For example for 04:00.0
 
 [source,bash]
 ----
-[bash]>sudo mstconfig -d 04:00.0 set LINK_TYPE_P1=2 LINK_TYPE_P2=2 
+[bash]>sudo mstconfig -d 04:00.0 set LINK_TYPE_P1=2 LINK_TYPE_P2=2
 ----
 
-To use Cisco optics, you need to disable to power limit by command:  
+To use Cisco optics, you need to disable to power limit by command:
 
 [source,bash]
 ----
 [bash]>mlxconfig -e -d [youpci] set ADVANCED_POWER_SETTINGS=True 
 [bash]>mlxconfig -e -d [youpci] set DISABLE_SLOT_POWER_LIMITER=True
 ----
-                                                                                                  
+
 == Upgrade procedure
 
 anchor:ofed_upgrade[]
@@ -245,9 +254,10 @@ TRex v2.32 and lower works with OFED 4.1 and it can't work with OFED 4.2/newer
 .TRex OFED matrix
 [options="header",cols="1^,1^,1^",width="60%"]
 |=================
-| TRex version  | OFED | Disto
-| 2.32  |  *only* 4.1  | CentOS 7.3
-| 2.33 or higher |  *only* 4.3  | CentOS 7.4
+| TRex version      | OFED          | Disto
+| 2.32 and below    | *only* 4.1    | CentOS 7.3
+| 2.33-2.56         | *only* 4.3    | CentOS 7.4
+| 2.57 and above    | *only* 4.6    | CentOS 7.6
 |=================
 
 WARNING: In our case an upgrade from CentOS 7.3 to CentOS 7.4 using `yum update` didn't work and we needed to *reinstall* everything from scratch see link:https://trex-tgn.cisco.com/youtrack/issue/trex-504[trex-504] 
@@ -495,10 +505,10 @@ Checking for OFED                        : Found needed version 4.0   #<1>
 Checking for library ibverbs             : yes
 'configure' finished successfully (1.826s)
 ----
-<1> make sure it was identify
+<1> make sure it was identified
 
 
-.Code change need for new OFED
+.Code change needed for new OFED
 [source,python]
 ----
         index fba7540..a55fe6b 100755
